[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
# rust-version = "1.81"

[dependencies]
anyhow = "1.0.68"                                           # error handling
bytes = "1.3.0"                                             # helps manage buffers
thiserror = "1.0.38"                                        # error handling
clap = { version = "4.5.17", features = ["derive"] }        # Input handling
flate2 = "1.0.33"
hex = "0.4.3"
sha1 = "0.10.6"
